--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -80,7 +80,7 @@ npm-deploy:
     - npm ci
     - npm publish --verbose --access public
   only:
-    - master
+    - tags
 
 maven-deploy-snapshot:
   image: maven:3.6-jdk-11
