--- a/package.json
+++ b/package.json
@@ -50,47 +50,47 @@
     "preact": "This is the only package that is build into the final startpage code."
   },
   "devDependencies": {
-    "@types/chai": "4.2.21",
-    "@types/jquery": "^3.5.6",
-    "@types/lodash": "^4.14.172",
-    "@types/mocha": "^9.0.0",
-    "@types/sinon": "^10.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "browser-sync": "^2.27.5",
+    "@types/chai": "4.2.14",
+    "@types/jquery": "^3.5.5",
+    "@types/lodash": "^4.14.168",
+    "@types/mocha": "^8.2.0",
+    "@types/sinon": "^9.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "browser-sync": "^2.26.14",
     "browserify": "^17.0.0",
     "browserify-istanbul": "^3.0.1",
-    "chai": "^4.3.4",
-    "concurrently": "^6.2.1",
+    "chai": "^4.2.0",
+    "concurrently": "^5.3.0",
     "cookie": "^0.4.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint": "^7.18.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "hashcat": "^0.4.1",
     "inliner": "1.13.1",
-    "jquery": "^3.6.0",
-    "karma": "^6.3.4",
-    "karma-browserify": "^8.1.0",
+    "jquery": "^3.5.1",
+    "karma": "^6.0.2",
+    "karma-browserify": "^8.0.0",
     "karma-browserstack-launcher": "^1.6.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
-    "less": "^4.1.1",
-    "lodash": "^4.17.21",
-    "mocha": "^9.1.0",
-    "preact": "^10.5.14",
+    "less": "^4.1.0",
+    "lodash": "^4.17.20",
+    "mocha": "^8.2.1",
+    "preact": "^10.5.12",
     "shx": "^0.3.3",
-    "sinon": "^11.1.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.3.5",
+    "sinon": "^9.2.4",
+    "tslib": "^2.1.0",
+    "typescript": "4.1.3",
     "watch": "1.0.2",
-    "watchify": "^4.0.0"
+    "watchify": "^3.11.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@acrolinx/sidebar-interface": "14.28.7"
+    "@acrolinx/sidebar-interface": "^14.28.2"
   }
 }
