--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,12 @@ stages:
   - deploy
 
 # Cache node modules, npm install will take care of minor updates
-cache:
-  untracked: false
-  policy: pull-push
-  key: ${CI_COMMIT_REF_SLUG}
-  paths:
-    - node_modules/
+# cache:
+#   untracked: false
+#   policy: pull-push
+#   key: ${CI_COMMIT_REF_SLUG}
+#   paths:
+#     - node_modules/
 
 include:
   - project: acrolinx/integrations/gitlab-ci-templates
@@ -46,7 +46,7 @@ sonarcloud-check:
 
 build:
   stage: build
-  image: node:14-alpine
+  image: node:latest
   before_script:
     - apt update -y
     - apt upgrade -y
