--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - build
   - deploy
 
-Cache node modules, npm install will take care of minor updates
+# Cache node modules, npm install will take care of minor updates
 cache:
   untracked: false
   policy: pull-push
