DEV-27253 Enable caching

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,13 +3,13 @@ stages:
   - build
   - deploy
 
-# Cache node modules, npm install will take care of minor updates
-# cache:
-#   untracked: false
-#   policy: pull-push
-#   key: ${CI_COMMIT_REF_SLUG}
-#   paths:
-#     - node_modules/
+#Cache node modules, npm install will take care of minor updates
+cache:
+  untracked: false
+  policy: pull-push
+  key: ${CI_COMMIT_REF_SLUG}
+  paths:
+    - node_modules/
 
 include:
   - project: acrolinx/integrations/gitlab-ci-templates
