--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ linux:build:
   before_script:
     - apt update -y
     - apt upgrade -y
-    - wget 'https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb'
+    - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
     - apt install -y ./google-chrome-stable_current_amd64.deb
   script:
     - node --version
