--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ npm-deploy:
 
 ## Beta release stage for DITA POC
 npm-deploy-beta:
-  image: node:16-alpine
+  image: node:lts
   stage: deploy
   variables:
     NPM_TOKEN: ${NPM_TOKEN}
