--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,6 +65,7 @@ build:
     - merge_requests
     - master
     - tags
+    - DITA_POC
 
 npm-deploy:
   image: node:16-alpine
@@ -84,23 +85,17 @@ npm-deploy:
 
 ## Beta release stage for DITA POC
 npm-deploy-beta:
-  image: node:lts
+  image: node:16-alpine
   stage: deploy
   variables:
     NPM_TOKEN: ${NPM_TOKEN}
-  allow_failure: true
-  before_script:
-    - apt update -y
-    - apt upgrade -y
-    - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-    - apt install -y ./google-chrome-stable_current_amd64.deb    
+  allow_failure: true 
   script:
     - npm --version
     - npm config set registry=https://registry.npmjs.org/
     - npm config set @acrolinx:registry=https://registry.npmjs.org/
     - npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
     - npm ci
-    - npm run buildDistWithNPMLinuxOnly
     - npm publish --verbose --access public --beta
   only:
     - DITA_POC
