DEV-27311 Added a call to a plugin function to open map in editor

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,7 +96,7 @@ npm-deploy-beta:
     - npm config set @acrolinx:registry=https://registry.npmjs.org/
     - npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
     - npm ci
-    - npm publish --verbose --access public --beta
+    - npm publish --verbose --access public --tag beta
   only:
     - DITA_POC
 
