--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "preact": "This is the only package that is build into the final startpage code."
   },
   "devDependencies": {
+    "@acrolinx/sidebar-interface": "^14.28.7",
     "@types/chai": "4.2.21",
     "@types/jquery": "^3.5.6",
     "@types/lodash": "^4.14.172",
@@ -79,7 +80,6 @@
     "less": "^4.1.1",
     "lodash": "^4.17.21",
     "mocha": "^9.1.0",
-    "preact": "^10.5.14",
     "shx": "^0.3.3",
     "sinon": "^11.1.2",
     "tslib": "^2.3.1",
@@ -91,6 +91,6 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@acrolinx/sidebar-interface": "^14.28.7"
+    "preact": "^10.5.14"
   }
 }
