--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,17 +16,9 @@ include:
     ref: master
     file: 'npm/check-licenses-gitlab.yml'
 
-vulnerabilities-check:
-  stage: verify
-  image: node:latest
-  before_script:
-    - npm ci
-  script:
-    - npm audit --production --audit-level=moderate
-  only:
-    - merge_requests
-    - master
-    - tags
+  - project: acrolinx/integrations/gitlab-ci-templates
+    ref: master
+    file: 'npm/vulnerable-prod-dependency-check.yml'
 
 sonarcloud-check:
   stage: verify
