DEV-27254 Adding dll deployment step in build pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,6 +108,40 @@ linux:npm-deploy:
   only:
     - tags
 
+windows:beta_deploy:
+  stage: deploy    
+  script:
+    - curl.exe --location --output artifacts_certificates.zip --header JOB-TOKEN:$CI_JOB_TOKEN https://gitlab.com/api/v4/projects/20636229/jobs/artifacts/master/download?job=cert_artifact
+    - Expand-Archive -Path .\artifacts_certificates.zip -DestinationPath .\certificate -Force
+    - $Env:COPYARTIFACT_BUILD_NUMBER_STARTPAGE=$CI_PIPELINE_IID
+    - $Env:SIGNINGPWD=$code_signing_key
+    - $Env:CI_JOB_TOKEN=JOB-TOKEN:$CI_JOB_TOKEN
+    - $Env:NUGET_API_KEY=$NUGET_API_KEY
+    - $Env:PUBLISH_INTERNAL=$PUBLISH_INTERNAL
+    - Write-Host "Get Latest Nuget"
+    - curl.exe --location --output nuget.exe "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe"
+    - ./gitlab-buils-ci.bat > execution.log
+  artifacts:
+    paths:  
+    - build\script.log
+    - execution.log
+      
+windows:deploy:
+  stage: deploy    
+  script:
+    - curl.exe --location --output artifacts_certificates.zip --header JOB-TOKEN:$CI_JOB_TOKEN https://gitlab.com/api/v4/projects/20636229/jobs/artifacts/master/download?job=cert_artifact
+    - Expand-Archive -Path .\artifacts_certificates.zip -DestinationPath .\certificate -Force
+    - $Env:COPYARTIFACT_BUILD_NUMBER_STARTPAGE=$CI_PIPELINE_IID
+    - $Env:SIGNINGPWD=$code_signing_key
+    - $Env:CI_JOB_TOKEN=JOB-TOKEN:$CI_JOB_TOKEN
+    - $Env:NUGET_API_KEY=$NUGET_API_KEY
+    - $Env:PUBLISH_INTERNAL=$PUBLISH_INTERNAL
+    - Write-Host "Get Latest Nuget"
+    - curl.exe --location --output nuget.exe "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe"
+
+    - ./gitlab-buils-ci.bat > execution.log
+  only:
+    - tags
 
 ## Beta release stage for DITA POC
 linux:npm-deploy-beta:
