--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
   paths:
     - node_modules/
 
-include:
+.include:
   - project: acrolinx/integrations/gitlab-ci-templates
     ref: master
     file: 'npm/check-licenses-gitlab.yml'
