DEV-27254 Remove existing nuget source before adding new

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,8 @@ windows:beta_deploy:
   stage: deploy 
   tags:
     - windows-build-node-integrations
+  variables:
+    PUBLISH_PUBLIC: "false"
   script:
      # Set required variables as windows Env variables
     - $Env:COPYARTIFACT_BUILD_NUMBER_STARTPAGE=$CI_PIPELINE_IID
