--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,13 +89,13 @@ linux:npm-deploy-beta:
   needs: ["linux:build"]
   script:
     - npm --version
-    - npm config set registry=https://registry.npmjs.org/
-    - npm config set @acrolinx:registry=https://registry.npmjs.org/
+    - npm config set @acrolinx:registry=https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/
     - npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+    - npm config set -- '//gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken' "${CI_JOB_TOKEN}"
     - npm ci
     - npm publish --verbose --access public --tag beta
   only:
-    - DITA_POC
+    - master
 
 linux:maven-deploy-snapshot:
   image: maven:3.6-jdk-11
