--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,7 +90,8 @@ linux:npm-deploy-beta:
     - npm config set @acrolinx:registry=https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/
     - npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
     - npm config set -- '//gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken' "${CI_JOB_TOKEN}"
-    - npm version 3.1.0-beta.$CI_PIPELINE_IID
+    - PACKAGE_VERSION=`cat package.json | grep "version\":" | cut -d'"' -f4`
+    - npm version $PACKAGE_VERSION-beta.$CI_PIPELINE_IID
     - npm ci
     - npm publish --verbose --access public --tag beta
   only:
