--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,11 +128,14 @@ windows:internal_deploy:
     - curl.exe --location --output nuget.exe "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe"
 
     - ./gitlab-build-ci.bat > execution.log
+  only:
+    - master
   artifacts:
     when: always
     paths:
       - build\script.log
       - execution.log
+
 
 #### Public Deployment Jobs for NPMJS, MAVEN, Nuget - Only Tags ####
 
