DEV-30589; fix: remove quotes from file name
Run internal deploy on merge requests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,10 +130,12 @@ windows:internal_deploy:
     - ./gitlab-build-ci.bat > execution.log
   only:
     - master
+    - merge_requests
   artifacts:
     when: always
     paths:
       - build\script.log
+      - build\script.txt
       - execution.log
 
 
