DEV-29112; fix: temporarily run internal deploy on branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,6 +122,7 @@ windows:internal_deploy:
     - python runBatchScript.py
   only:
     - master
+    - merge_requests
   artifacts:
     when: always
     paths:
