--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,6 +120,9 @@ windows:internal_deploy:
     - curl.exe --location --output nuget.exe "https://dist.nuget.org/win-x86-commandline/latest/nuget.exe"
 
     - python runBatchScript.py
+  only:
+    - master
+    - merge_requests
   artifacts:
     when: always
     paths:
