DEV-30467; ci: Publish to gitlab registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,23 +78,19 @@ windows:build:
     - master
     - tags
 
-linux:npm-deploy-beta:
+
+# publish npm package to gitlab registry
+linux:npm-deploy-gitlab-registry:
   image: node:16-alpine
   stage: publish_internal
-  variables:
-    NPM_TOKEN: ${NPM_TOKEN}
   needs: ["linux:build"]
   script:
     - npm --version
-    - npm config set @acrolinx:registry=https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/
-    - npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+    - npm config set @acrolinx:registry https://gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/
     - npm config set -- '//gitlab.com/api/v4/projects/${CI_PROJECT_ID}/packages/npm/:_authToken' "${CI_JOB_TOKEN}"
-    - PACKAGE_VERSION=`cat package.json | grep "version\":" | cut -d'"' -f4`
-    - npm version $PACKAGE_VERSION-beta.$CI_PIPELINE_IID
-    - npm ci
-    - npm publish --verbose --access public --tag beta
+    - npm publish --verbose
   only:
-    - master
+    - DEV-30465-reusePrototype
 
 linux:maven-deploy-snapshot:
   image: maven:3.6-jdk-11
