--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "lib": ["ES5","DOM", "ES2015.Collection"] /* ES2015.Collection is just needed to make sinon happy */,
     "importHelpers": true,
     "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
