DEV-33408; feat: remove platform validation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -144,7 +144,7 @@ linux:maven-deploy-release:
   only:
     - tags
 
-windows:deploy:
+.windows:deploy:
   stage: publish_public
   tags:
     - windows-build-node-integrations
