--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.acrolinx.sidebar</groupId>
   <artifactId>acrolinx-server-selector</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-
   <name>Acrolinx Server Selector</name>
 
   <organization>
-      <name>Acrolinx GmbH</name>
-      <url>https://www.acrolinx.com/</url>
+    <name>Acrolinx GmbH</name>
+    <url>https://www.acrolinx.com/</url>
   </organization>
 
   <licenses>
-      <license>
-          <name>Acrolinx Software License Agreement</name>
-      </license>
+    <license>
+      <name>Acrolinx Software License Agreement</name>
+    </license>
   </licenses>
 
   <developers>
-      <developer>
-          <name>Acrolinx GmbH</name>
-          <organization>Acrolinx GmbH</organization>
-      </developer>
+    <developer>
+      <name>Acrolinx GmbH</name>
+      <organization>Acrolinx GmbH</organization>
+    </developer>
   </developers>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.6</version>
-        <executions>
-          <execution>
-            <id>package-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-            <configuration>
-              <descriptors>
-                <descriptor>artifactory.xml</descriptor>
-              </descriptors>
-              <appendAssemblyId>false</appendAssemblyId>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
 
   <distributionManagement>
     <repository>
@@ -63,4 +36,52 @@
       <url>https://gitlab.com/api/v4/projects/22486890/packages/maven</url>
     </snapshotRepository>
   </distributionManagement>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.43.0</version>
+        <configuration>
+          <pom>
+            <sortPom>
+              <expandEmptyElements>false</expandEmptyElements>
+              <indentSchemaLocation>true</indentSchemaLocation>
+              <lineSeparator>\n</lineSeparator>
+              <sortDependencies>scope,groupId,artifactId</sortDependencies>
+              <sortPlugins>groupId,artifactId</sortPlugins>
+            </sortPom>
+          </pom>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.6</version>
+        <executions>
+          <execution>
+            <id>package-assembly</id>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <descriptors>
+                <descriptor>artifactory.xml</descriptor>
+              </descriptors>
+              <appendAssemblyId>false</appendAssemblyId>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
