--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "watchifyTest": "watchify tmp/compiled/test/browser-tests/src/index.js -o tmp/browser-tests-index.js",
     "browserifyTest": "browserify tmp/compiled/test/browser-tests/src/index.js -o tmp/browser-tests-index.js",
     "browsersync": "browser-sync start --server --files \"app/**/*\" --files \"tmp/browser-tests-index.js\" --startPath app --cors",
-    "lint": "eslint . --ext .ts",
-    "lintFix": "eslint . --ext .ts --fix",
+    "lint": "eslint .",
+    "lintFix": "eslint . --fix",
     "buildDistButNotNPM": "shx rm -rf tmp/dist && shx mkdir -p app/scripts && npm run generateTranslationsTs && npm run lint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && shx mkdir -p tmp && shx cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined",
     "buildDistWithNPMLinuxOnly": "shx rm -rf tmp/dist && shx mkdir -p app/scripts && npm run generateTranslationsTs && npm run lint && tsc && npm run injectVersion && npm run test && npm run browserify && npm run less && shx mkdir -p tmp && shx cp -r app tmp/dist && hashcat tmp/dist/index.html && npm run buildOfflineDist && npm run buildInlined && npm run buildNpmDistLinuxOnly",
     "buildNpmDistLinuxOnly": "shx mkdir -p dist && shx cp -R tmp/dist-offline/ dist && npm run createNpmDistFilesIndexLinuxOnly && npm run copyInlinedToNpmDist",
@@ -51,29 +51,29 @@
   "devDependencies": {
     "@acrolinx/sidebar-interface": "15.3.0",
     "@types/chai": "4.2.21",
+    "@types/eslint": "^9.6.0",
     "@types/jquery": "^3.5.6",
-    "@types/lodash": "^4.14.172",
+    "@types/lodash": "^4.17.7",
     "@types/mocha": "^9.0.0",
     "@types/sinon": "^10.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "browser-sync": "^2.27.5",
     "browserify": "^17.0.0",
     "browserify-istanbul": "^3.0.1",
     "chai": "^4.3.4",
     "concurrently": "^6.2.1",
     "cookie": "^0.4.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-sonarjs": "^1.0.4",
     "hashcat": "^0.4.1",
     "inliner": "1.13.1",
     "jquery": "^3.6.0",
-    "karma": "^6.3.4",
+    "karma": "^6.4.4",
     "karma-browserify": "^8.1.0",
     "karma-browserstack-launcher": "^1.6.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.3",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha": "^2.0.1",
     "less": "^4.1.1",
@@ -82,7 +82,8 @@
     "shx": "^0.3.3",
     "sinon": "^11.1.2",
     "tslib": "^2.3.1",
-    "typescript": "4.3.5",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.0",
     "watch": "1.0.2",
     "watchify": "^4.0.0"
   },
