chore: cleanup and bump beta version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acrolinx/sidebar-startpage",
-  "version": "4.0.0-beta.2",
+  "version": "4.0.0-beta.3",
   "description": "A Container Component for Acrolinx Integrations that loads the Acrolinx sidebar",
   "type": "module",
   "author": "Acrolinx",
@@ -13,9 +13,6 @@
   "files": [
     "dist"
   ],
-  "publishConfig": {
-    "tag": "dev"
-  },
   "scripts": {
     "generateTranslations": "mkdir -p tmp/generated && node tools/generate-translations.js",
     "dev": "vite",
@@ -23,6 +20,7 @@
     "build": "tsc -b && vite build && vite build --mode inline",
     "postbuild": "node tools/pack-inlined.js > dist/dist-inline/index.js && cp src/index.d.ts dist/dist-inline",
     "preview": "vite preview",
+    "test:watch": "vitest",
     "test": "vitest run",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
