--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,4 +58,4 @@ publish:
     - npm config set @acrolinx:registry=https://registry.npmjs.org/
     - npm config set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
     - npm ci
-    - npm publish --verbose --access public --tag beta
+    - npm publish --verbose --access public
