--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=acrolinx_sidebar-startpage
-sonar.organization=acrolinx-gl
+sonar.organization=acrolinx
 sonar.sources=src
 sonar.qualitygate.wait=true
