--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@eslint/js": "^9.38.0",
     "@preact/preset-vite": "^2.10.2",
-    "@vitest/browser": "^4.0.3",
+    "@vitest/browser-playwright": "^4.0.3",
     "chai": "^6.2.0",
     "eslint": "^9.38.0",
     "import": "^0.0.6",
