--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,8 @@ updates:
     schedule:
       interval: 'daily'
     versioning-strategy: increase
+    groups:
+      vitest:
+        patterns:
+          - '@vitest/browser-playwright'
+          - 'vitest'
