--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@acrolinx/sidebar-startpage",
-  "version": "4.0.4",
+  "version": "4.0.5",
   "description": "A Container Component for Acrolinx Integrations that loads the Acrolinx sidebar",
   "author": "Acrolinx",
-  "url": "http://www.acrolinx.com",
+  "url": "https://www.acrolinx.com",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
